price card has been created

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" class="bg-slate-200 h-screen"></div>
+    <div id="root" class="bg-slate-200 h-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
